feat: implement printing
